[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[project]
name = "mapsplat"
readme = "README.md"
version = "0.1.0"
description = ""
authors = [{name = "Frankie Robertson"}]
license-expression = "MIT"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.8"
dependencies = [
    "jinja2",
    "pyyaml",
    "pycountry",
    "PyGithub>=1.55",
]

[project.scripts]
mapsplat_action = "action:main"
mapsplat = "mapsplat:main"

[project.urls]
Home = "https://github.com/nordic-rse/mapsplat"

[tool]
[tool.pdm]
